Update API endpoint in registration script

--- a/register.html
+++ b/register.html
@@ -393,9 +393,8 @@
  <script>
 document.addEventListener('DOMContentLoaded', () => {
 
-  // Твоя робоча вебка
-  const API = "https://script.google.com/macros/s/AKfycbzavsHNwfQQ_5P3ciP19G7vOJjRdo3jr1GgHEi1oSDXNY5QT0ek4wwXubygTtEQoqFM/exec";
-
+  // Твоя робоча вебка (актуальна)
+const API = "https://script.google.com/macros/s/AKfycbyyBGjueNe074tk2QXmt2QTShhW00vzrFVOsw4UB4sgQ1eMHWKCsjCr6Z4NtwQdiSaG/exec";
   const form = document.getElementById('regForm');
   const qty = document.getElementById('food_qty');
   const qtyField = document.getElementById('foodQtyField');
